blog posts, AI refinements, minor tweaks

--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Greenery - References</title>
+    <title>The Greenery Blog - 5 Vegan Pantry Staples</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -143,7 +142,13 @@
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a href="order.html" class="nav-link text-dark">Order</a>
+            <a
+              href="order.html"
+              class="nav-link active bg-success"
+              aria-current="page"
+              style="margin-right: 10px"
+              >Order</a
+            >
           </li>
           <li class="nav-item">
             <a href="menu.html" class="nav-link text-dark">Menu</a>
@@ -152,202 +157,48 @@
             <a href="contact.html" class="nav-link text-dark">Contact</a>
           </li>
           <li class="nav-item">
-            <a
-              href="process.html"
-              class="nav-link text-dark"
-              style="margin-right: 10px"
-              >Process</a
-            >
+            <a href="process.html" class="nav-link text-dark">Process</a>
           </li>
           <li class="nav-item">
-            <a
-              href="sources.html"
-              class="nav-link active bg-success"
-              aria-current="page"
-              style="margin-right: 10px"
-              >References</a
-            >
+            <a href="sources.html" class="nav-link text-dark">References</a>
           </li>
         </ul>
       </header>
     </div>
-    <main class="container my-5" data-aos="fade-up">
-      <h1 class="text-center mb-4">Sources & Attributions</h1>
-      <p class="text-center lead mb-5">
-        Resources used in the creation of this website project for team
-        2009-902.
-      </p>
+    <main class="container my-5">
+        <article>
+            <header class="mb-4 border-bottom pb-3">
+                <h1 class="fw-bold">5 Vegan Pantry Staples for Easy Weeknight Meals</h1>
+                <p class="text-muted">Published on 3/4/2025 by The Greenery</p>
+            </header>
 
-      <div class="alert alert-secondary" role="alert">
-        <strong>Note:</strong> All specific restaurant details (name, address,
-        phone, menu items, prices, specific partner names, specific
-        sustainability stats/goals) are fictional and created for this
-        demonstration project unless otherwise stated. Placeholder images are
-        used throughout.
-      </div>
+            <section class="blog-content">
+                <img src="media/pantry.jpg" alt="Assortment of vegan pantry items like beans, grains, spices" class="img-fluid rounded mb-4 shadow-sm" style="max-height: 400px; width: 100%; object-fit: cover;">
 
-      <h2 class="mt-4 mb-3">Frameworks & Libraries</h2>
-      <ul>
-        <li>
-          <strong>Bootstrap 5.3.3:</strong> Frontend framework used for layout,
-          components (Navbar, Cards, Carousel, Tabs, Accordion, Forms, Modals if
-          used), grid system, and responsiveness. (<a
-            href="https://getbootstrap.com/docs/5.3/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >https://getbootstrap.com/docs/5.3/</a
-          >)
-        </li>
-        <li>
-          <strong>Bootstrap Icons 1.11.3:</strong> Used for iconography
-          throughout the site (e.g., social media icons, feature icons, dietary
-          key icons). (<a
-            href="https://icons.getbootstrap.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >https://icons.getbootstrap.com/</a
-          >)
-        </li>
-        <li>
-          <strong>Animate on Scroll 2.3.1: </strong> Used for animations and transitions. (<a href="https://github.com/michalsnik/aos" target="_blank">https://github.com/michalsnik/aos</a>)
-        </li>
-      </ul>
+                <p>Eating delicious, healthy vegan meals during a busy week doesn't have to be complicated! Having a well-stocked pantry is key. Here are five versatile staples we always recommend keeping on hand at The Greenery (and that you can easily stock at home):</p>
 
-      <h2 class="mt-4 mb-3">Images</h2>
-      <ul>
-        <li>
-          All images used are placeholders sourced/created for demonstration
-          purposes. All images are open domain and free to use.
-        </li>
-      </ul>
+                <h2 class="h4 mt-4">1. Legumes (Beans & Lentils)</h2>
+                <p>Canned or dried, legumes are protein powerhouses. Think chickpeas for hummus or crispy roasting, black beans for tacos and bowls, kidney beans for chili, and lentils (red, green, brown) for soups, stews, salads, or hearty fillings like our Shepherd's Pie. They're affordable, nutritious, and incredibly versatile.</p>
 
-      <h2 class="mt-4 mb-3">Content & Data Inspiration</h2>
-      <ul>
-        <li>
-          All descriptive text, menu item names/descriptions, prices, addresses,
-          phone numbers, hours, testimonials, FAQ content, and specific
-          sustainability goals/partner names are fictional, created solely for
-          this project demonstration.
-        </li>
-        <li>
-          Sustainability Impact Statistics (Water Saved, CO₂e Reduced, Waste
-          Diverted %): These are illustrative examples based on general
-          knowledge of plant-based diet and restaurant sustainability impacts.
-          Actual implementation would require sourcing specific data from
-          reports like those by the EAT-Lancet Commission, FAO, EPA, or specific
-          LCA studies relevant to the restaurant's practices and location. Data
-          can be sourced from sites like:
-          <ul>
-            <li>
-              Water Footprint Network (<a
-                href="https://waterfootprint.org/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >waterfootprint.org</a
-              >)
-            </li>
-            <li>
-              Project Drawdown (<a
-                href="https://drawdown.org/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >drawdown.org</a
-              >)
-            </li>
-            <li>
-              Local Waste Management / EPA reports for waste diversion data.
-            </li>
-          </ul>
-        </li>
-        <li>
-          UberEats, DoorDash, and GrubHub logos are all trademarks of their
-          specific companies and are used in accordance with Fair Use laws
-        </li>
-      </ul>
+                <h2 class="h4 mt-4">2. Whole Grains</h2>
+                <p>From comforting oats for breakfast to the base of our popular Buddha Bowls, whole grains provide sustained energy and fiber. Keep quinoa, brown rice, farro, or whole wheat pasta on hand. They form the foundation of countless satisfying meals.</p>
 
-      <h2 class="mt-4 mb-3">AI Chatbot Integration</h2>
-      <ul>
-        <li>
-          The Greenery Helper chatbot utilizes the Gemini 2.0 flash LLM, owned
-          and operated by Google. Information is not personally identifiable,
-          however, please refrain from entering personal information. Please
-          view
-          <a href="https://ai.google.dev/gemini-api/terms"
-            >https://ai.google.dev/gemini-api/terms</a
-          >
-          for more information about privacy regarding the AI chatbot.
-        </li>
-        <li>
-          <b>PLEASE NOTE: </b> due to the nature of LLMs, there is no 100% guarantee that the information produced by the chatbot will be fully accurate.
-          However, we have done our best to tune the AI accordingly to our use case.
-        </li>
-      </ul>
+                <h2 class="h4 mt-4">3. Canned Tomatoes</h2>
+                <p>Diced, crushed, or puréed – canned tomatoes are flavor bombs essential for pasta sauces, soups, stews, curries, and more. They offer year-round tomato flavor when fresh ones aren't in season.</p>
 
-      <h2 class="mt-4 mb-3">Code Snippets & Implementation</h2>
-      <ul>
-        <li>HTML structure based on standard semantic HTML5 practices.</li>
-        <li>
-          CSS styling primarily utilizes Bootstrap 5.3 utility classes and
-          component styles.
-        </li>
-        <li>
-          JavaScript (`script.js`):
-          <ul>
-            <li>
-              DOM Manipulation (e.g., updating cart items, toggling visibility)
-              uses standard Web APIs (`document.getElementById`,
-              `addEventListener`, `createElement`, etc.).
-            </li>
-            <li>
-              Cart Logic (calculating totals, handling customizations): Custom
-              implementation provided in previous steps, using basic arithmetic
-              and DOM updates.
-            </li>
-            <li>Form Submission Prevention: Uses `event.preventDefault()`.</li>
-            <li>
-              Bootstrap Component Initialization (Tooltips, Carousel, Tabs,
-              Accordion): Uses standard initialization methods shown in
-              Bootstrap 5 documentation. Example: `new
-              bootstrap.Tooltip(tooltipTriggerEl)`.
-            </li>
-          </ul>
-        </li>
-        <li>
-          Navbar, Carousel, Cards, Forms, Tabs, Accordion implementation follows
-          the official Bootstrap 5 Documentation (<a
-            href="https://getbootstrap.com/docs/5.3/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >getbootstrap.com/docs/5.3/</a
-          >).
-        </li>
-      </ul>
+                <h2 class="h4 mt-4">4. Nuts & Seeds (and their Butters!)</h2>
+                <p>Cashews for creamy sauces, walnuts for salads, chia and flax seeds for binding or adding omega-3s, tahini (sesame seed paste) for dressings – nuts and seeds add healthy fats, texture, and flavor. Nut butters (peanut, almond) are great for snacks, sauces (like our Spicy Peanut Noodles!), or smoothies.</p>
 
-      <h2 class="mt-4 mb-3">Tools Used</h2>
-      <ul>
-        <li>Text Editor: Visual Studio Code</li>
-        <li>
-          Web Browser: Google Chrome / Firefox
-        </li>
-        <li>Version Control: Git / GitHub</li>
-      </ul>
+                <h2 class="h4 mt-4">5. Spices & Nutritional Yeast</h2>
+                <p>A good spice rack is crucial for flavor! Essentials include cumin, paprika (smoked is great!), garlic powder, onion powder, oregano, and chili powder. And don't forget nutritional yeast ('nooch')! This deactivated yeast adds a cheesy, savory, umami depth to sauces, tofu scrambles, and pasta dishes – it's a vegan kitchen superstar.</p>
 
-      <h2 class="mt-4 mb-3">Affirmation Statement</h2>
-      <ul>
-        <li>
-          Team 2009-902 affirms that the Bootstrap 5 layout of this webpage is
-          the original creation of team 2009-902.
-        </li>
-      </ul>
+                <p class="mt-4">With these staples in your pantry, you're always just a few steps away from a delicious and satisfying plant-based meal!</p>
+            </section>
+        </article>
 
-      <h2 class="mt-4 mb-3">Copyright Checklist</h2>
-      <ul>
-        <li>
-          <a href="media/webmaster-copyright-final.pdf"
-            >Link to Student Copyright Checklist</a
-          >
-        </li>
-      </ul>
+        <div class="mt-5">
+            <a href="index.html#blog-preview" class="btn btn-outline-secondary"><i class="bi bi-arrow-left"></i> Back to Home</a>
+        </div>
     </main>
     <footer class="bg-light text-center text-lg-start mt-auto border-top">
       <div class="container p-4">
@@ -531,6 +382,5 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
