--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
               <i class="bi bi-geo-alt-fill me-2 text-success"></i
               ><strong>Address:</strong><br />
               777 Water Wheel Drive,<br />
-              Champion, PA 15622
+              Vegville, PA 15622
             </p>
             <p>
               <i class="bi bi-telephone-fill me-2 text-success"></i
@@ -231,7 +231,7 @@
                 class="shadow-sm"
               ></iframe>
               <small class="d-block mt-1 text-muted"
-                >777 Water Wheel Dr, Champion, PA</small
+                >777 Water Wheel Dr, Vegville, PA</small
               >
               <a
                 href="https://maps.app.goo.gl/nyYJ1HmcJfaCLYSQ8"
