--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <p class="lead mb-4" data-aos="fade-up" data-aos-delay="100">
             Welcome to The Greenery, the largest Vegan-friendly restaurant in
             Central PA. Here, you'll find everything to meet your dietary needs,
-            from buddha bowls filled with juicy vegetables to chocolate mousse
+            from Buddha Bowls filled with juicy vegetables to chocolate mousse
             that is sure to leave a sweet taste in your mouth! We do all of this
             while ensuring our committment to sustainability.
           </p>
@@ -640,7 +640,7 @@
             <h2 class="mb-3">Visit Us</h2>
             <p>
               <i class="bi bi-geo-alt-fill me-1 text-success"></i>
-              777 Water Wheel Drive, Champion, PA, 15622
+              777 Water Wheel Drive, Vegville, PA, 15622
             </p>
             <p>
               <i class="bi bi-clock-fill me-1 text-success"></i> Open Daily:
