--- a/order.html
+++ b/order.html
@@ -169,8 +169,7 @@
     <main class="container my-5" data-aos="fade-up">
       <h1 class="text-center mb-4">Order Online</h1>
       <p class="text-center lead mb-5">
-        Select your items below. Note: This is a demonstration and does not
-        process real orders.
+        Select your items below.
       </p>
 
       <form id="mockOrderForm">
