--- a/contact.html
+++ b/contact.html
@@ -181,10 +181,8 @@
       </p>
 
       <div class="row g-4">
-        <!-- Added gutter spacing -->
         <div class="col-lg-6 mb-4" data-aos="fade-right">
           <div class="p-4 bg-light rounded shadow-sm h-100">
-            <!-- Added padding and background -->
             <h2 class="text-success mb-3">Get in Touch</h2>
             <p>
               <i class="bi bi-geo-alt-fill me-2 text-success"></i
@@ -219,7 +217,6 @@
             <!-- Embedded Map -->
             <div class="mt-4">
               <h4 class="mb-2">Find Us</h4>
-              <!-- IMPORTANT: Replace this iframe with your actual Google Maps Embed Code -->
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3055.3492646397085!2d-79.3002781236128!3d40.02298087950966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89cad17abd9a35e5%3A0xe64df0643e194e61!2sSeven%20Springs%20Mountain%20Resort!5e0!3m2!1sen!2sus!4v1743953008096!5m2!1sen!2sus"
                 width="100%"
@@ -265,7 +262,6 @@
         </div>
         <div class="col-lg-6 mb-4" data-aos="fade-left">
           <div class="p-4 bg-light rounded shadow-sm h-100">
-            <!-- Added padding and background -->
             <h2 class="text-success mb-3">Send Us a Message</h2>
             <p class="small text-muted">
               Use this form for general inquiries, feedback, or rewards program
@@ -487,7 +483,6 @@
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Order Delivery</h5>
             <p class="small">Get your favorites delivered:</p>
-            <!-- Replace # with actual partner links -->
             <div class="mb-2">
               <i class="bi bi-truck me-1"></i>
               <a
@@ -526,7 +521,6 @@
           <!-- Column 4: Follow Us -->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Follow Us</h5>
-            <!-- Replace # with actual social links -->
             <a href="#" class="text-dark me-2" title="Facebook"
               ><i class="bi bi-facebook fs-4"></i
             ></a>
@@ -593,7 +587,7 @@
 
       <!-- Input Area -->
       <div class="chat-input p-2 border-top">
-        <!-- Optional: Quick Replies -->
+        <!-- Quick Replies -->
         <button
           class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
           data-question="What are your hours?"
