--- a/index.html
+++ b/index.html
@@ -324,7 +324,6 @@
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <i class="bi bi-egg-fried fs-1 text-success mb-3"></i>
-              <!-- Example icon -->
               <h5 class="card-title">100% Vegan</h5>
               <p class="card-text">
                 Everything on our menu is completely plant-based. No
@@ -515,7 +514,7 @@
         </div>
       </section>
       <!-- === End Our Team Section === -->
-      <!-- === NEW: Blog Preview Section === -->
+      <!-- === Blog Preview Section === -->
       <section id="blog-preview" class="my-5 container">
         <h2 class="text-center mb-4" data-aos="fade-up">From Our Blog</h2>
         <p
@@ -606,10 +605,6 @@
             </div>
           </div>
         </div>
-        <!-- Optional: Link to a full blog page if you plan one -->
-        <!-- <div class="text-center mt-4">
-             <a href="#" class="btn btn-success">Visit Full Blog</a>
-         </div> -->
       </section>
       <section
         id="rewards-section"
@@ -625,13 +620,11 @@
             to specials!
           </p>
           <p>It's free and easy to join.</p>
-          <!-- Link this button to a future signup page or modal, or just the contact page for now -->
           <a
             href="contact.html?subject=Rewards%20Program%20Inquiry"
             class="btn btn-lg btn-success"
             >Learn More & Sign Up</a
           >
-          <!-- The ?subject=... prefills the subject line if they use the contact form -->
         </div>
       </section>
       <section class="mb-5 pt-4 pb-1" data-aos="fade-up">
@@ -695,7 +688,6 @@
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Order Delivery</h5>
             <p class="small">Get your favorites delivered:</p>
-            <!-- Replace # with actual partner links -->
             <div class="mb-2">
               <i class="bi bi-truck me-1"></i>
               <a
@@ -734,7 +726,6 @@
           <!-- Column 4: Follow Us -->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Follow Us</h5>
-            <!-- Replace # with actual social links -->
             <a href="#" class="text-dark me-2" title="Facebook"
               ><i class="bi bi-facebook fs-4"></i
             ></a>
@@ -755,14 +746,13 @@
         <a class="text-dark" href="sources.html">References</a>
       </div>
     </footer>
-    <div class="toast-container position-fixed bottom-0 start-0 p-3" style="z-index: 1100;"> <!-- Ensure z-index is high -->
+    <div class="toast-container position-fixed bottom-0 start-0 p-3" style="z-index: 1100;">
 
-      <!-- The Toast itself -->
       <div id="chatbotInfoToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
-              <i class="bi bi-chat-right-text-fill me-2 text-success"></i> <!-- Icon -->
+              <i class="bi bi-chat-right-text-fill me-2 text-success"></i>
               <strong class="me-auto">AI Assistant Available!</strong>
-              <!-- <small>Just now</small> --> <!-- Optional timestamp -->
+              <small>Just now</small>
               <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="toast-body">
@@ -817,7 +807,7 @@
 
       <!-- Input Area -->
       <div class="chat-input p-2 border-top">
-        <!-- Optional: Quick Replies -->
+        <!-- Quick Replies -->
         <button
           class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
           data-question="What are your hours?"
