--- a/process.html
+++ b/process.html
@@ -265,7 +265,6 @@
       <div
         class="row align-items-center my-5 py-4 border-bottom flex-md-row-reverse"
       >
-        <!-- Alternate image position -->
         <div class="col-md-7" data-aos="fade-right">
           <h2>
             <i class="bi bi-trash3-fill text-success me-2"></i>Waste Reduction &
@@ -472,7 +471,6 @@
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Order Delivery</h5>
             <p class="small">Get your favorites delivered:</p>
-            <!-- Replace # with actual partner links -->
             <div class="mb-2">
               <i class="bi bi-truck me-1"></i>
               <a
@@ -511,7 +509,6 @@
           <!-- Column 4: Follow Us -->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Follow Us</h5>
-            <!-- Replace # with actual social links -->
             <a href="#" class="text-dark me-2" title="Facebook"
               ><i class="bi bi-facebook fs-4"></i
             ></a>
@@ -578,7 +575,7 @@
 
       <!-- Input Area -->
       <div class="chat-input p-2 border-top">
-        <!-- Optional: Quick Replies -->
+        <!-- Quick Replies -->
         <button
           class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
           data-question="What are your hours?"
