--- a/menu.html
+++ b/menu.html
@@ -559,7 +559,6 @@
                 </div>
               </div>
             </div>
-            <!-- Add more combo cards if needed -->
           </div>
         </div>
 
@@ -787,7 +786,6 @@
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Order Delivery</h5>
             <p class="small">Get your favorites delivered:</p>
-            <!-- Replace # with actual partner links -->
             <div class="mb-2">
               <i class="bi bi-truck me-1"></i>
               <a
@@ -826,7 +824,6 @@
           <!-- Column 4: Follow Us -->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Follow Us</h5>
-            <!-- Replace # with actual social links -->
             <a href="#" class="text-dark me-2" title="Facebook"
               ><i class="bi bi-facebook fs-4"></i
             ></a>
@@ -893,7 +890,7 @@
 
       <!-- Input Area -->
       <div class="chat-input p-2 border-top">
-        <!-- Optional: Quick Replies -->
+        <!-- Quick Replies -->
         <button
           class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
           data-question="What are your hours?"
