--- a/order.html
+++ b/order.html
@@ -174,7 +174,6 @@
 
       <form id="mockOrderForm">
         <div class="row g-4">
-          <!-- Added gutter spacing -->
           <!-- Menu Items Column -->
           <div class="col-md-7">
             <h2 class="mb-3">Choose Your Items</h2>
@@ -661,7 +660,6 @@
                         />
                       </div>
                     </div>
-                    <!-- Simple Option Example for Combo -->
                     <div class="mt-1 small">
                       <label class="form-check-label me-2 fw-semibold"
                         >Drink Choice:</label
@@ -740,7 +738,6 @@
                         />
                       </div>
                     </div>
-                    <!-- Note: Could add options for Buddha Bowl customizations here if needed, linked to qty-combo-bowl -->
                   </div>
                 </div>
               </div>
@@ -1056,7 +1053,6 @@
                           >Raspberry</label
                         >
                       </div>
-                      <!-- Add more flavors if needed -->
                     </div>
                   </div>
                 </div>
@@ -1263,7 +1259,6 @@
           <!-- Order Summary & Details Column -->
           <div class="col-md-5">
             <div class="sticky-top" style="top: 80px">
-              <!-- Add sticky-top for summary -->
               <h2 class="mb-3">Your Order</h2>
               <div class="card bg-light mb-4 shadow-sm">
                 <div class="card-body">
@@ -1273,7 +1268,6 @@
                     class="list-unstyled mb-3"
                     style="max-height: 300px; overflow-y: auto"
                   >
-                    <!-- Added scroll for long orders -->
                     <li class="text-muted">Select items to add them here.</li>
                   </ul>
                   <hr />
@@ -1400,7 +1394,6 @@
 
               <div class="mt-4 p-3 border rounded bg-light text-center">
                 <h5 class="mb-3">Prefer Other Delivery?</h5>
-                <!-- Replace # with actual partner links -->
                 <i class="bi bi-truck me-1"></i>
                 <a
                   href="order.html"
@@ -1432,9 +1425,7 @@
                 </a>
               </div>
             </div>
-            <!-- End sticky-top -->
           </div>
-          <!-- End Summary Column -->
         </div>
         <!-- End Row -->
       </form>
@@ -1470,7 +1461,6 @@
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Order Delivery</h5>
             <p class="small">Get your favorites delivered:</p>
-            <!-- Replace # with actual partner links -->
             <div class="mb-2">
               <i class="bi bi-truck me-1"></i>
               <a
@@ -1509,7 +1499,6 @@
           <!-- Column 4: Follow Us -->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Follow Us</h5>
-            <!-- Replace # with actual social links -->
             <a href="#" class="text-dark me-2" title="Facebook"
               ><i class="bi bi-facebook fs-4"></i
             ></a>
@@ -1576,7 +1565,7 @@
 
       <!-- Input Area -->
       <div class="chat-input p-2 border-top">
-        <!-- Optional: Quick Replies -->
+        <!-- Quick Replies -->
         <button
           class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
           data-question="What are your hours?"
