forgot the work log lmao

--- a/sources.html
+++ b/sources.html
@@ -348,6 +348,15 @@
           >
         </li>
       </ul>
+
+      <h2 class="mt-4 mb-3">Plan of Work Log</h2>
+      <ul>
+        <li>
+          <a href="media/webmaster-work-log-final.pdf"
+            >Link to Plan of Work Log</a
+          >
+        </li>
+      </ul>
     </main>
     <footer class="bg-light text-center text-lg-start mt-auto border-top">
       <div class="container p-4">
