--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
       href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
       type="image/x-icon"
     />
+    <!-- Offline packages -->
+    <link rel="stylesheet" href="bootstrap-offline/aos.css">
+    <link rel="stylesheet" href="bootstrap-offline/bootstrap.min.css">
+    <script src="bootstrap-offline/aos.js"></script>
+    <script src="bootstrap-offline/bootstrap.bundle.min.js"></script>
     <style>
       #hero-background {
         position: relative;
-        background: url("https://www.oliocarli.us/-/media/ita/hub_editoriale/articoli/2020/vegetariano-vegano/differenza-tra-vegano-e-vegetariano.ashx?h=800&iar=0&w=1920")
+        background: url("media/differenza-tra-vegano-e-vegetariano.jpg")
           center/cover no-repeat;
         color: white;
       }
