--- a/process.html
+++ b/process.html
@@ -20,6 +20,11 @@
       href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
       type="image/x-icon"
     />
+    <!-- Offline packages -->
+    <link rel="stylesheet" href="bootstrap-offline/aos.css">
+    <link rel="stylesheet" href="bootstrap-offline/bootstrap.min.css">
+    <script src="bootstrap-offline/aos.js"></script>
+    <script src="bootstrap-offline/bootstrap.bundle.min.js"></script>
     <style>
       /* Chat Bubble / Window */
       .chat-bubble {
